# bezier-curve-3d

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py
app/src/: CMakeLists.txt  app.cpp
include/bezier-curve-3d/: BezierCurveCreator.h  Point3D.h  Utils.h  WPoint3D.h
module/: CMakeLists.txt  Point3D.ixx  Utils.ixx
ref/src/: BezierCurve.hxx  Curve.hxx  CurveWriter.hxx  LinearInterpolator.hxx  Point.hxx
source/: CMakeLists.txt
source/include/: BezierCurveCreator.h  Point3D.h  Utils.h  WPoint3D.h
source/src/: Point3D.cpp  Utils.cpp  WPoint3D.cpp
src/: BezierControlPoint.cxx  BezierControlPoint.hxx  BezierCurve.cxx  BezierCurve.hxx  BezierCurveCreator.cpp  Curve.cpp  Curve.cxx  Curve.hxx  CurveWriter.cxx  CurveWriter.hxx  LinearInterpolator.cxx  LinearInterpolator.hxx  Point.cpp  Point.cxx  Point.hxx  Point3D.cpp  Utils.cpp  WPoint3D.cpp  bezier_control_point.cpp  bezier_control_point.h  bezier_curve.cpp  bezier_curve.h  curve.cpp  curve.h  curve_writer.cpp  curve_writer.h  linear_interpolator.cpp  linear_interpolator.h  point.cpp  point.h
test/: Makefile  bzt  curve_csv.csv  test.cpp  test.cxx
test/unit/: BezierCurveCreator_UT.cpp  CMakeLists.txt  Point3D_UT.cpp  Utils_UT.cpp  WPoint3D_UT.cpp  main.cpp
test2/: Makefile  test2.cpp
